--- a/requirements.txt
+++ b/requirements.txt
@@ -62,6 +62,7 @@ greenlet==0.4.15
 gunicorn==20.0.4
 h5py==2.10.0
 HeapDict==1.0.1
+heroku==0.1.4
 html5lib==1.0.1
 hypothesis==5.5.4
 idna==2.8
@@ -165,7 +166,7 @@ pytest-astropy-header==0.1.2
 pytest-doctestplus==0.5.0
 pytest-openfiles==0.4.0
 pytest-remotedata==0.3.2
-python-dateutil==2.8.1
+python-dateutil==1.5
 python-jsonrpc-server==0.3.4
 python-language-server==0.31.7
 pytz==2019.3
